# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.

cmake_minimum_required(VERSION 3.13)

project(SEALExamples VERSION 4.1.1 LANGUAGES CXX)

# If not called from root CMakeLists.txt
if (NOT DEFINED SEAL_BUILD_EXAMPLES)
    set(SEAL_BUILD_EXAMPLES ON)


    # Import Microsoft SEAL
    find_package(SEAL 4.1.1 EXACT REQUIRED)

    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
endif ()

if (SEAL_BUILD_EXAMPLES)
    add_executable(dev)

    target_sources(dev
            PRIVATE
            ${CMAKE_CURRENT_LIST_DIR}/examples.cpp
            ${CMAKE_CURRENT_LIST_DIR}/BFV.cpp
            ${CMAKE_CURRENT_LIST_DIR}/BGV.cpp
            ${CMAKE_CURRENT_LIST_DIR}/CKKS.cpp
            )
    if (TARGET SEAL::seal)
        target_link_libraries(dev PRIVATE SEAL::seal)
    elseif (TARGET SEAL::seal_shared)
        target_link_libraries(dev PRIVATE SEAL::seal_shared)
    else ()
        message(FATAL_ERROR "Cannot find target SEAL::seal or SEAL::seal_shared")
    endif ()
endif ()
